# Python-Web-hw6

./: README.md  create_clean_db.sql  create_tables_hw.py  db_connection_hw.py  pyproject.toml  q_01.sql  q_02.sql  q_03.sql  q_04.sql  q_05.sql  q_06.sql  q_07.sql  q_08.sql  q_09.sql  q_10.sql  q_11.sql  q_12.sql  seeds.py
