[tool.poetry]
name = "hw6-web"
version = "0.1.0"
description = ""
authors = ["anton-akulenko <anton.htl@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "hw6_web"}]

[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "^2.9.6"
faker = "^18.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
